--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
       "bundleIdentifier": "com.anonymous.roomiegastos"
     },
     "android": {
+      "icon": "./assets/images/icon.png",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -54,7 +55,13 @@
       "router": {},
       "eas": {
         "projectId": "54992a5e-3c17-411a-95ad-7cd863b24cbd"
-      }
+      },
+      "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyBfLCoWT5PmOFahLwb69RjEYnBR3f9dARY",
+      "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "rootmigastos.firebaseapp.com",
+      "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "rootmigastos",
+      "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "rootmigastos.firebasestorage.app",
+      "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "153761442358",
+      "EXPO_PUBLIC_FIREBASE_APP_ID": "1:153761442358:web:7781c2c6bfe8c31706c697"
     }
   }
 }
